summative.moria.Moria.scala.error
Erreur de compilation :
Moria:7: error: not found: value vientDePoser
    vientDePoser = false
    ^