summative.moria.Moria.scala.code
def goAndGet() {
  while (!estSurBiscuit() && !estFaceMur()) {
    recule()
  }
  if (estSurBiscuit()) {
    prendBiscuit()
    vientDePoser = false
  }
  while (porteBiscuit() && !estSurBiscuit()) {
    avance()
  }
  if (estSurBiscuit() && porteBiscuit()) {
    recule() ; poseBiscuit() ; recule()
   }
  }


def sortir() {
  while (!estFaceMur()) {
    goAndGet()
  }
  if (estDosMur()) {
    gauche() ;avance() ; gauche() ; avance()
  }
}

sortir()